[gd_scene load_steps=5 format=3 uid="uid://clj2qii0ta8lx"]

[ext_resource type="PackedScene" uid="uid://y7s1081jj0hp" path="res://addons/inventory-system/editor/base/base_inventory_editor.tscn" id="1_g1usf"]
[ext_resource type="Script" uid="uid://dlj8qgchs77a3" path="res://addons/inventory-system/editor/craft_stations/craft_station_types_editor.gd" id="2_0s4ew"]
[ext_resource type="Script" uid="uid://baoflx32svgcc" path="res://addons/inventory-system/editor/inventory_item_list_editor.gd" id="3_ov27o"]
[ext_resource type="PackedScene" uid="uid://cdv6y2uu0ywq0" path="res://addons/inventory-system/editor/craft_stations/craft_station_type_editor.tscn" id="4_1l8uv"]

[node name="BaseInventoryEditor" instance=ExtResource("1_g1usf")]
script = ExtResource("2_0s4ew")

[node name="CraftStationTypesItemList" type="VBoxContainer" parent="HSplitContainer" index="0"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
script = ExtResource("3_ov27o")

[node name="SearchItems" type="Control" parent="HSplitContainer/CraftStationTypesItemList" index="0"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_vertical = 4

[node name="LineEdit" type="LineEdit" parent="HSplitContainer/CraftStationTypesItemList/SearchItems" index="0"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
placeholder_text = "Search Items"
draw_control_chars = true

[node name="TextureRect" type="TextureRect" parent="HSplitContainer/CraftStationTypesItemList/SearchItems" index="1"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -8.0
offset_right = -8.0
offset_bottom = 8.0
grow_horizontal = 0
grow_vertical = 2
expand_mode = 1

[node name="ItemList" type="ItemList" parent="HSplitContainer/CraftStationTypesItemList" index="1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
allow_rmb_select = true
fixed_icon_size = Vector2i(16, 16)

[node name="CraftStationTypeEditor" parent="HSplitContainer" index="1" instance=ExtResource("4_1l8uv")]
layout_mode = 2

[node name="CraftStationTypesPopupMenu" type="PopupMenu" parent="." index="1"]
size = Vector2i(28, 8)

[connection signal="item_popup_menu_requested" from="HSplitContainer/CraftStationTypesItemList" to="." method="_on_craft_station_types_item_list_item_popup_menu_requested"]
[connection signal="item_selected" from="HSplitContainer/CraftStationTypesItemList" to="." method="_on_craft_station_types_item_list_item_selected"]
[connection signal="changed" from="HSplitContainer/CraftStationTypeEditor" to="." method="_on_craft_station_type_editor_changed"]
[connection signal="id_pressed" from="CraftStationTypesPopupMenu" to="." method="_on_craft_station_types_popup_menu_id_pressed"]
